финальная верстка основной странички

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -47,7 +47,7 @@
         ><button class="circle" id="grade_4">4</button
         ><button class="circle" id="grade_5">5</button>
       </section>
-      <button id="btn">Submit</button>
+      <input type="submit" id="submit" value="submit"></input>
     </main>
     <div hidden>
       <!-- Rating state end -->
